bug fix
horizontal scrolling

--- a/main.css
+++ b/main.css
@@ -291,7 +291,6 @@ p{
 footer{
     display: block;
     text-align: center;
-    width: 100%;
     background: #153a54;
     color: white;
     padding: 10px;
